# GeomLib

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/geometry/: geometry.h
src/geometry/curve/: geom_BezierCurve.cpp  geom_BezierCurve.h  geom_BoundedCurve.h  geom_Curve.cpp  geom_Curve.h
src/utils/: exceptions.h  precision.h  utils.h
